--- a/foundations/flex/05-flex-modal/index.html
+++ b/foundations/flex/05-flex-modal/index.html
@@ -11,10 +11,14 @@
     <div class="modal">
       <div class="icon">!</div>
       <div class="header">Are you sure you want to do that?</div>
+      <div class="option"
       <button class="close-button">✖</button>
+      </div>
       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+      <div class="option">
       <button class="continue">Continue</button>
       <button class="cancel">Cancel</button>
+      </div>
     </div>
   </body>
 </html>
